# cache3

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README.rst  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pylint.conf  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test-sqliye0  test-sqliye0-shm  tox.ini  usage.html
.github/workflows/: AutoDocs.yml  AutoPushlish.yaml
_sources/: api.rst.txt  index.rst.txt  usage.rst.txt
disk_cache/: default.sqlite3  default.sqlite3-shm
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst  usage.rst
docs/source/_templates/: my_sidebar.html
src/: __init__.py  main.py  sc.py  ts.py
src/cache3/: __init__.py  base.py  cache.py  disk.py  locks.py  memory.py  migrate.py  multi.py  setting.py  util.py  utils.py  validate.py  version.py
src/test/: default.sqlite3  default.sqlite3-shm
tests/: light.py  test_base_api.py  test_basecache.py  test_benchmark_disk.py  test_benchmark_safe.py  test_benchmark_simple.py  test_cache.py  test_disk.py  test_evictor.py  test_general_api.py  test_memory.py  test_minicache.py  test_multiprocess.py  test_multithreads.py  test_package.py  test_simplecache.py  test_sqlite.py  test_utils.py  test_validate.py  tools.py  utils.py
tests/disk_cache/: default.sqlite3  default.sqlite3-shm
tests/test_disk_cache/: test_disk_general.py  test_disk_simplecache.py  test_diskcache.py  test_simpediskcache.py
tests/test_memory_cache/: test_general.py  test_memory_general.py  test_safecache.py  test_simplecache.py
