[metadata]
name = cache3
version = attr: cache3.__version__
url = ''
license = MIT
author_email = 'clarkmonkey@163.com'

[options]
package_dir =
    = src
packages = find:
python_requires >= 3.5

[options.packages.find]
where = src

[flake8]
max-line-length = 100
exclude = .git, .tox, build
select = C, E, F, W, B, B950, I, N
ignore = F401, E501

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1
