[metadata]
name = cache3
version = attr: cache3.__version__
url = https://github.com/StKali/cache3

author = attr: cache3.__author__
author_email = clarkmonkey@163.com

license = MIT
license_file = LICENSE

description = A safe and lightweight cache library, written in pure-Python.
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Environment :: Other Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires >= 3.5

[options.packages.find]
where = src

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1
